[package]
name = "bpg2hevc"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vi/bpg2hevc"
license = "MIT/Apache-2.0"
description = "CLI tool to convert some BPG pictures to raw HEVC streams (and indirectly to HEIC images)"
categories = ["graphics", "multimedia::video", "command-line-utilities"]
keywords = ["bpg", "hevc", "heif", "heic"]


[dependencies]
anyhow = "1.0.71"
binrw = "0.11.1"
bitstream-io = "1.6.0"
modular-bitfield = "0.11.2"
xflags = "0.3.1"
